# sentinel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
examples/: anti_debug-example.cpp  logger-example.cpp  persistence-example.cpp  vm_detection_example.cpp
include/sentinel/: common.h
include/sentinel/core/: config.h  framework.h  logger.h  sentinel.h
include/sentinel/core/utils/: process_helper.h  raii_wrapper.h  registry_helper.h  service_helper.h  string_helper.h  system_helper.h  system_utils.h
include/sentinel/modules/: anti_debug.h  persistence.h  vm_detection.h
src/core/: logger.cpp
src/core/utils/: process_helper.cpp  registry_helper.cpp  service_helper.cpp  system_helper.cpp  system_utils.cpp
src/modules/: anti_debug.cpp  persistence.cpp  vm_detection.cpp
src/modules/persistence/: persistence.cpp
src/modules/vm_detection/: vm_detection.cpp
tests/: win_services.cpp
